--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <table cellspacing=20">
     <tr>
-    <td><img src="images/vanessa.png" alt="Vanessa profile picture"></td>
+    <td><img src="Images/vanessa.png" alt="Vanessa profile picture"></td>
     <td><h1>Vanessa Chacon</h1>
       <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
       <p>I am an iOS and Web Developer. I love coffee and brew my own beers.</p></td>
