--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </tr>
     </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
+  <a href="Hobbies.html">My Hobbies</a>
+  <a href="Contact-Me.html">Contact Me</a>
 </body>
 </html>
