--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -10,7 +10,7 @@
     <p>888-555-0123</p>
     <p>myemail@email.com</p>
     <hr>
-    <form action="mailto:vchacon1011@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:codechacon@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="Your Name" value=""><br>
       <label>Your Email:</label>
